--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@ https://github.com/PagerDuty/webdemo
          <h1>About this list</h1>
        </div>
        <div class="well">
-         <p>I should totally put some content here.</p>
+         <p>
+This is a labour of love from some PagerDuty employees -- but none of the scripts here are officially supported by <a href="http://www.pagerduty.com">PagerDuty</a>.
+If you'd like to add something to this page either email <a href="mailto:dave@pagerduty.com">dave@pagerduty.com</a>, or even better submit a pull request to <a href="https://github.com/eurica/pagerdutyscripts">https://github.com/eurica/pagerdutyscripts</a>.
+</p>
        </div>
 
 
