--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <option>Python</option>
   <option>PHP</option>
   <option>Lua</option>
+  <option>node.js</option>
   <option value="Tool">Other tools</option>
 </select>
 <table id="scripttable" class="table  table-striped table-hover">
@@ -96,7 +97,7 @@
    <tr>
      <td><a href="http://euri.ca/2013/meteor-js-sample-integration-with-pagerduty/index.html">Meteor.js</a></td>
      <td>Populate a <a href="http://pagerduty-status-demo.meteor.com/">Status board</a> from PD with Meteor</td>
-     <td>Node.js</td>
+     <td>node.js</td>
    </tr>
    <tr>
      <td><a href="https://github.com/dshack/pagerduty-webscripts">PagerDuty Webscripts</a></td>
@@ -207,5 +208,10 @@ If you'd like to add something to this page either email <a href="mailto:dave@pa
       
     </script>
     <script src="js/bootstrap.min.js"></script>
+
+    <script src="//static.getclicky.com/js" type="text/javascript"></script>
+    <script type="text/javascript">try{ clicky.init(100726221); }catch(e){}</script>
+    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100726221ns.gif" /></p></noscript>
+
   </body>
 </html>
