--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
      <td>Zoho reports can import PagerDuty data and run SQL queries against it.  This blog post shows how to generate reports from your incidents.</td>
      <td>Tool</td>
    </tr>  
+   
+      <tr>
+     <td><a href="https://github.com/thegreenrobot/pagerduty_dashing">pagerduty_dashing</a></td>
+     <td>A <a href="http://shopify.github.io/dashing/" target="_blank">Dashing</a> dashboard for PagerDuty services and on-call status</td>
+     <td>Tool</td>
+   </tr>  
+
 
 
 <!--
