--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <tr>
      <td><a href="https://github.com/thegreenrobot/pagerduty_dashing">pagerduty_dashing</a></td>
      <td>A <a href="http://shopify.github.io/dashing/" target="_blank">Dashing</a> dashboard for PagerDuty services and on-call status</td>
-     <td>Tool</td>
+     <td>Ruby</td>
    </tr>  
 
 
