--- a/index.html
+++ b/index.html
@@ -158,12 +158,17 @@
      <td>Tool</td>
    </tr>  
    
-      <tr>
-     <td><a href="https://github.com/thegreenrobot/pagerduty_dashing">pagerduty_dashing</a></td>
-     <td>A <a href="http://shopify.github.io/dashing/" target="_blank">Dashing</a> dashboard for PagerDuty services and on-call status</td>
-     <td>Ruby</td>
+    <tr>
+      <td><a href="https://github.com/thegreenrobot/pagerduty_dashing">pagerduty_dashing</a></td>
+      <td>A <a href="http://shopify.github.io/dashing/" target="_blank">Dashing</a> dashboard for PagerDuty services and on-call status</td>
+      <td>Ruby</td>
    </tr>  
 
+    <tr>
+      <td><a href="http://jsfiddle.net/eurica/a6hef/">"Who is on call?"</a></td>
+      <td>A quick <a href="https://github.com/eurica/pdjs" target="_blank">PDJS</a> example of how to load who is on call now and display it in a webpage.</td>
+      <td>JavaScript</td>
+   </tr>  
 
 
 <!--
