--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
       <td>JavaScript</td>
    </tr>  
 
+   <tr>
+     <td><a href="https://github.com/PagerDuty/public-support-scripts">Public support scripts</a></td>
+     <td>A variety of scripts that the support team at PagerDuty have collected to handle reporting and booking overrides.  Some in Python, some in Ruby.</td>
+     <td>Python</td>
+   </tr>
+
 
 <!--
    <tr>
@@ -182,12 +188,6 @@
    
    </tbody>
 </table>
-<!-- todo: 
-Let https://github.com/Shopify/pagerdutyemails know OCHON heads up is coming
-https://github.com/PagerDuty/webdemo 
-
--->
-
        <div class="page-header" id="about">
          <h1>About this list</h1>
        </div>
